remove forced vertical scroll to eliminate double scrollbar issue

--- a/src/styles/layouts/main.css
+++ b/src/styles/layouts/main.css
@@ -1,6 +1,5 @@
 .main-layout {
   height                              : 100vh;
-  overflow-y                          : scroll;
   display                             : flex;
   flex-direction                      : column;
 }
